# mwe-grpc

./: .gitignore  CMakeLists.txt  Readme.md  protoclient.cpp  protoserver.cpp  prototest.proto
